--- a/assets/sass/3-component/_slickslider.scss
+++ b/assets/sass/3-component/_slickslider.scss
@@ -12,12 +12,20 @@
         height: 365px;
         position: relative;
         background: $white;
+        background-repeat: no-repeat;
+        background-size: cover;
         @include border-radius(5px);
         .anguvideo{
             height: 365px;
             iframe{
+                width: 100%;
                 height: 100%;
                 @include border-radius(5px);
+                .player{
+                    max-width: 100% !important;
+                    width: 100%;
+                    height: 100%;
+                }
             }
         }
     }
@@ -39,10 +47,18 @@
             .slidee{
                 height: 75px;
                 @include border-radius(5px);
+                background-repeat: no-repeat;
+                background-size: cover;
             }
             &:first-of-type, &:last-of-type{
                 padding-left: 0px;
             }
         }
     }
+}
+
+.vp-center .player{
+    max-width: 100% !important;
+    width: 100%;
+    height: 100%;
 }
