--- a/assets/sass/4-pages/_usermain.scss
+++ b/assets/sass/4-pages/_usermain.scss
@@ -1,7 +1,11 @@
 .content-container{
     width: 100%;
     float: left;
-    padding: 0 15px;
+    .content-inner{
+        width: 100%;
+        float: left;
+        padding: 0 15px;
+    }
 }
 
 .container-top{
@@ -15,6 +19,19 @@
         video, iframe, img{
             width: 100%;
             height: 365px;
+        }
+        .slick-slider{
+            overflow: hidden;
+            margin-bottom: 10px;
+            .slick-arrow{
+                z-index: 999;
+                &.slick-prev{
+                    left: 0px !important;
+                }
+                &.slick-next{
+                    right: 0px !important;
+                }
+            }
         }
     }
     .container-right{
