--- a/assets/sass/2-basics/_layout.sass
+++ b/assets/sass/2-basics/_layout.sass
@@ -20,7 +20,7 @@
     background: $white 
     margin-left: 10px
 
-.content
+.center-content
     width: calc(100% - 420px)
     float: left
     // margin: 0 10px
