--- a/components/compo.html
+++ b/components/compo.html
@@ -130,7 +130,7 @@
         </div>
 
         <!-- App Content -->
-        <div class="content">
+        <div class="center-content">
 
         </div>
 
