--- a/components/components.html
+++ b/components/components.html
@@ -128,7 +128,7 @@
         </div>
 
         <!-- App Content -->
-        <div class="content">
+        <div class="center-content">
 
         </div>
 
