--- a/components/dashboard.html
+++ b/components/dashboard.html
@@ -128,7 +128,7 @@
         </div>
 
         <!-- App Content -->
-        <div class="content">
+        <div class="center-content">
             <!-- app top -->
             <div class="container-top">
                 <div class="container-left">
