--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -1,7 +1,8 @@
 *
   outline: none !important
   @include box-sizing(border-box)
-
+a
+  cursor: pointer
 .primary
   color: $primary !important
 .secondary
