--- a/assets/sass/3-component/_accordion.sass
+++ b/assets/sass/3-component/_accordion.sass
@@ -262,6 +262,8 @@
     margin-bottom: 8px
 .panel-heading
   padding: 0px !important
+.panel-body
+  padding: 0px !important
 .accordion-label
   width: 100%
   display: flex
