--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -45,6 +45,7 @@
 @import "3-component/tooltip.scss";
 @import "3-component/search.scss";
 @import "3-component/_slickslider.scss";
+@import "3-component/pagination.scss";
 
 // 4 -Pages
 //---------------------------------------------------
