--- a/assets/sass/3-component/_pagination.scss
+++ b/assets/sass/3-component/_pagination.scss
@@ -21,5 +21,8 @@
                 @extend .silver-gradient;
             }
         }
+        .disabled{
+            display: inline-block !important;
+        }
     }
 }
