--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7490,7 +7490,7 @@ a {
 }
 
 .disabled {
-  display: none !important;
+  pointer-events: none;
 }
 
 .black {
@@ -9332,7 +9332,7 @@ i.color-btn {
 }
 .friend-card .card-info .card-right .card-thumbs li img {
   width: calc(100% - 5px);
-  max-height: 45px;
+  height: 45px;
 }
 .friend-card .card-info .card-right .card-thumbs li:nth-child(odd) img {
   margin: 0 5px 0px 0px;
@@ -9360,7 +9360,10 @@ i.color-btn {
   text-align: center;
   font-size: 20px;
   color: #344051;
-  min-height: 36px;
+  min-height: 32px;
+}
+.friend-card .card-info .card-right .rewards .rewards-left .count img, .friend-card .card-info .card-right .rewards .rewards-right .count img {
+  height: 30px;
 }
 .friend-card .card-info .card-right .rewards .rewards-left .title, .friend-card .card-info .card-right .rewards .rewards-right .title {
   width: 100%;
@@ -12369,6 +12372,10 @@ ul.simple-list li:last-of-type {
   border-color: #5B616A;
   color: #fff;
 }
+.pagination li .disabled {
+  display: inline-block !important;
+}
+
 .form-group {
   margin-bottom: 0;
 }
