--- a/assets/sass/3-component/_card.scss
+++ b/assets/sass/3-component/_card.scss
@@ -104,6 +104,9 @@
         span{
             color: $black;
             font-size: $font-m;
+            img{
+                height: 30px;
+            }
         }
     }
     .hover-icon{
@@ -319,6 +322,10 @@
     .table-img{
         width: 80px;
         float: left;
+        img{
+            max-width: 100%;
+            max-height: 50px;
+        }
     }
     .table-content{
         width: calc(100% - 300px);
