design changes committed

--- a/components/components.html
+++ b/components/components.html
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-6 flex-center-space">
                         <a class="logo" href="#">
-                            <img src="assets/img/logo.png" />
+                            <img src="../assets/img/logo.png" />
                         </a>
                         <div class="search-top">
                             <div class="form-group">
@@ -49,7 +49,7 @@
                             </li>
                             <li class="dropdown">
                                 <a class="dropdown-toggle">
-                                    <img src="assets/img/message.png" />                      
+                                    <img src="../assets/img/message.png" />                      
                                 </a>
                             </li>
                             <li class="dropdown">
@@ -64,7 +64,7 @@
                                 <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                                     aria-expanded="false">
                                     <div class="avatar avatar-s">
-                                        <img src="assets/img/user.gif" alt="user" />
+                                        <img src="../assets/img/user.gif" alt="user" />
                                     </div>
                                     <span class="username">Username <i class="fa fa-caret-down"></i></span>
                                 </a>
@@ -144,10 +144,10 @@
             <div class="right-wrapper">
                 <div class="right-no-project">   
                     <div class="msg-top">
-                        <h5 class="msg-title"><img src="assets/img/other-work.png" /> Other Works</h5>
+                        <h5 class="msg-title"><img src="../assets/img/other-work.png" /> Other Works</h5>
                         <ul>
-                            <li><img src="assets/img/work.png" /></li>
-                            <li><img src="assets/img/work.png" /></li>
+                            <li><img src="../assets/img/work.png" /></li>
+                            <li><img src="../assets/img/work.png" /></li>
                         </ul>
                     </div>
 
@@ -313,7 +313,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar.jpg" />
+                                    <img src="../assets/img/avatar.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -324,7 +324,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar1.jpg" />
+                                    <img src="../assets/img/avatar1.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -335,7 +335,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar.jpg" />
+                                    <img src="../assets/img/avatar.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -346,7 +346,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar1.jpg" />
+                                    <img src="../assets/img/avatar1.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -357,7 +357,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar.jpg" />
+                                    <img src="../assets/img/avatar.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -378,7 +378,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar.jpg" />
+                                    <img src="../assets/img/avatar.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -389,7 +389,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar1.jpg" />
+                                    <img src="../assets/img/avatar1.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -400,7 +400,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar.jpg" />
+                                    <img src="../assets/img/avatar.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -411,7 +411,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar1.jpg" />
+                                    <img src="../assets/img/avatar1.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -422,7 +422,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar.jpg" />
+                                    <img src="../assets/img/avatar.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -441,7 +441,7 @@
                     <i class="fa fa-trophy"></i>
                 </div>
                 <div class="right-content">
-                    <img src="assets/img/chart.png" />
+                    <img src="../assets/img/chart.png" />
                 </div>
             </div>
 
@@ -458,7 +458,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar.jpg" />
+                                    <img src="../assets/img/avatar.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -469,7 +469,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar1.jpg" />
+                                    <img src="../assets/img/avatar1.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -480,7 +480,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar.jpg" />
+                                    <img src="../assets/img/avatar.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -491,7 +491,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar1.jpg" />
+                                    <img src="../assets/img/avatar1.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -502,7 +502,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar.jpg" />
+                                    <img src="../assets/img/avatar.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -523,7 +523,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar.jpg" />
+                                    <img src="../assets/img/avatar.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -534,7 +534,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar1.jpg" />
+                                    <img src="../assets/img/avatar1.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -545,7 +545,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar.jpg" />
+                                    <img src="../assets/img/avatar.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -556,7 +556,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar1.jpg" />
+                                    <img src="../assets/img/avatar1.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -567,7 +567,7 @@
                                     <p>Designation</p>
                                 </div>
                                 <div class="list-right">
-                                    <img src="assets/img/avatar.jpg" />
+                                    <img src="../assets/img/avatar.jpg" />
                                 </div>
                             </a>
                         </li>
@@ -586,7 +586,7 @@
                     <i class="fa fa-trophy"></i>
                 </div>
                 <div class="right-content">
-                    <img src="assets/img/chart.png" />
+                    <img src="../assets/img/chart.png" />
                 </div>
             </div>
 
@@ -634,7 +634,7 @@
 
             <div class="right-wrapper">
                 <div class="ads">
-                    <img src="assets/img/ads.png" />
+                    <img src="../assets/img/ads.png" />
                 </div>
             </div>
         
@@ -664,7 +664,7 @@
                                 </div>
                                 <div class="list-right self-top">
                                     <div class="icon-holder">
-                                        <img src="assets/img/right-icon.png"/>
+                                        <img src="../assets/img/right-icon.png"/>
                                     </div>
                                 </div>
                             </a>
@@ -677,7 +677,7 @@
                                 </div>
                                 <div class="list-right self-top">
                                     <div class="icon-holder">
-                                        <img src="assets/img/right-icon.png"/>
+                                        <img src="../assets/img/right-icon.png"/>
                                     </div>
                                 </div>
                             </a>
@@ -690,7 +690,7 @@
                                 </div>
                                 <div class="list-right self-top">
                                     <div class="icon-holder">
-                                        <img src="assets/img/right-icon.png"/>
+                                        <img src="../assets/img/right-icon.png"/>
                                     </div>
                                 </div>
                             </a>
@@ -703,7 +703,7 @@
                                 </div>
                                 <div class="list-right self-top">
                                     <div class="icon-holder">
-                                        <img src="assets/img/right-icon.png"/>
+                                        <img src="../assets/img/right-icon.png"/>
                                     </div>
                                 </div>
                             </a>
@@ -716,7 +716,7 @@
                                 </div>
                                 <div class="list-right self-top">
                                     <div class="icon-holder">
-                                        <img src="assets/img/right-icon.png"/>
+                                        <img src="../assets/img/right-icon.png"/>
                                     </div>
                                 </div>
                             </a>
@@ -729,7 +729,7 @@
                                 </div>
                                 <div class="list-right self-top">
                                     <div class="icon-holder">
-                                        <img src="assets/img/right-icon.png"/>
+                                        <img src="../assets/img/right-icon.png"/>
                                     </div>
                                 </div>
                             </a>
@@ -742,7 +742,7 @@
                                 </div>
                                 <div class="list-right self-top">
                                     <div class="icon-holder">
-                                        <img src="assets/img/right-icon.png"/>
+                                        <img src="../assets/img/right-icon.png"/>
                                     </div>
                                 </div>
                             </a>
@@ -761,7 +761,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-4 col-md-4">
-                        <img src="assets/img/logo.png" />
+                        <img src="../assets/img/logo.png" />
                         <p>Collabro is a decentralised platform for entrepreneurs to collaborate, engage, find resources and do business. Built with AI-powered tripartite collaboration system technology to connect business owners and end-users. This platform will benefit those who are seeking resources to hire, buy, sell or offer services.</p>
                     </div>
                     <div class="col-lg-2 col-md-2 col-lg-offset-1 col-md-offset-1">
