--- a/assets/sass/4-pages/_usermain.scss
+++ b/assets/sass/4-pages/_usermain.scss
@@ -63,3 +63,11 @@
         overflow: hidden;
     }
 }
+
+.rank-icon{
+    height: 30px;
+    img{
+        width: 35px;
+        height: 30px;
+    }
+}
